# vision_computadora_tp3

./: README.md  pyproject.toml  tp3.ipynb
